# BitBat

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  ROOT_CAUSE.md  docker-compose.devgod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.codex/: config.toml
.devgod/work/: README.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.4-MILESTONE-AUDIT.md  v1.6-v1.6-MILESTONE-AUDIT.md
.streamlit/: config.toml
config/: alert_rules.yaml  user_config.yaml
dashboard/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
deployment/: bitbat-ingest.service  bitbat-monitor.service  docker-compose.monitoring.yml  nginx.conf  prometheus.yml
docs/: README.md  data-contracts.md  database_schema.md  deep-research-report.md  gui_redesign.md  happy-path-local.md  ingestion_strategy.md  monitor-operations-runbook.md  monitoring_strategy.md  persistence-overview.md  project-structure.md  system-overview.md  testing-quality.md  usage-guide.md  v2-cutover-readiness.md  validator_logic.md
memory/: MEMORY.md
scripts/: bootstrap_monitor_model.py  build_recovery_evidence.py  check-devgod-happy-path.sh  check-devgod-workflow-live.sh  check-devgod-workflow.sh  devgod-setup.ps1  devgod-setup.sh  ensure_autonomous_stack_ready.py  evaluate_bitbat_v2_strategy.py  init_autonomous_db.py  run_ingestion_service.py  run_monitoring_agent.py  start.sh
streamlit/: app.py  app_pipeline_backup.py  style.py
tests/: __init__.py  test_bootstrap_monitor_model.py  test_cli.py  test_config_loader.py  test_ensure_autonomous_stack_ready.py  test_monitor_runbook_contract.py  test_recovery_runbook_contract.py  test_run_monitoring_agent.py
web/: README.md  app.js  index.html  style.css
(+686 files in other folders)
